...
  cardapioBraille('Tinha cardápio em braille?', 'Cardápio em braille'),
  banheiroAdaptado('Tinha banheiro adaptado?', 'Banheiro adaptado'),
  espacoSensorial('Tinha espaço sensorial para crianças com TEA?',
      'Espaço sensorial (TEA)'),
  vagasPcd('Tinha vagas de estacionamento para cadeirantes e PCD?',
      'Vagas para cadeirantes e PCD'),
  interpreteLibras('Tinha intérprete de Libras?', 'Intérprete de Libras');

  const ItemAcessibilidade(this.pergunta, this.nomeCurto);
  final String pergunta;
  final String nomeCurto;
}

...
